--- a/NandS_TechniquesInFinance/4. Finite_difference_methods.ipynb
+++ b/NandS_TechniquesInFinance/4. Finite_difference_methods.ipynb
@@ -525,12 +525,549 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64067b53",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a110bf2",
+   "metadata": {},
+   "source": [
+    "### Black-Scholes PDE\n",
+    "\n",
+    "$$V_t + \\frac12 \\sigma^2 S^2 V_{SS} + (r - q)SV_S - rV = 0$$\n",
+    "\n",
+    "- $V = V(t,S)$ - Option price\n",
+    "- $S$ - Underlying asset price\n",
+    "- $\\sigma$ - Volatility of underlying asset price\n",
+    "- $r$ - Risk-free interest rate\n",
+    "- $q$ - dividend yield\n",
+    "\n",
+    "> Linear with variable coefficients<br>\n",
+    "> First-order in time $t$; Second-order in space $S$<br>\n",
+    "> Parabolic PDE with $b = c = 0$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "The initial condition (in time) is actually a terminal condition (backward PDE)\n",
+    "\n",
+    "Terminal conditions (终端条件) and boundary conditions (边界条件) for European call option:\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "V(T,S) & = (S - K)_+ \\\\\n",
+    "V(t, 0) & = 0 \\\\\n",
+    "\\lim_{S\\to\\infin} V(t, S) & = S - Ke^{-r(T-t)}\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "- $K$ - Strike price (defined by the European call option contract)\n",
+    "- Terminal conditions - 在时间维度的终点（到期日）的状态。\n",
+    "\n",
+    "Terminal conditions and boundary conditions for European put option:\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "V(T,S) & = (K - S)_+ \\\\\n",
+    "V(t, 0) & = Ke^{-r(T-t)} \\\\\n",
+    "\\lim_{S\\to\\infin} V(t, S) & = 0\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d61f3329",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44c86942",
+   "metadata": {},
+   "source": [
+    "## 3. Black-Scholes 偏微分方程 | Black-Scholes partial differential equationi\n",
+    "\n",
+    "Why PDEs in finance?\n",
+    "\n",
+    "If a real-valued stochastic process $X$ satisfies the stochastic differential equation: \n",
+    "$$\n",
+    "dX_t = bX_tdt + \\sigma X_tdW_t\n",
+    "$$\n",
+    "- $d$ - Constant drift\n",
+    "- $\\sigma$ - Volatility\n",
+    "- $W$ - Standard Brownian motion\n",
+    "\n",
+    "> $X$ is a Geometric Brownian motion\n",
+    "\n",
+    "The value function:\n",
+    "$$\n",
+    "V(t,x)=\\mathbb{E}{\\left[\\left.\\int_t^Te^{-r(s-t)}f(s,X_s)ds+e^{-r(T-t)}g(X_T)\\right|X_t=x\\right]}\n",
+    "$$\n",
+    "- $V(t, x)$ - Solution of the Black-Scholes PDE\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Particular case of the $\\color{yellow}\\text{Feynman-Kac formula, 费曼-卡茨公式}$ \n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "rV(t,x)-V_t(t,x)-bxV_x(t,x)-\\frac{1}{2}\\sigma^2x^2V_{xx}(t,x) & =f(t,x),\\forall(t,x)\\in[0,T)\\times\\mathbb{R} \\\\\n",
+    "V(T,x) & =g(x),\\forall x\\in\\mathbb{R}\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "- A powerful tool which links conditional expectations and partial differential equations.\n",
+    "- It is the reason why many financial option pricing problems can be solved by a PDE approach.\n",
+    "\n",
+    "> The Black-Scholes PDE is only one particular case of the Feynman-Kac PDE with $d = 1$, $b, \\sigma$ linear, $r$ constant, $f = 0$\n",
+    "> $g$ - Payoff of the European call/put option.\n",
+    "\n",
+    "It admits a closed-form solution (解析解), however generally the Feynman-Kac PDE does not admit an explicit solution (显示解), hence the need for numerical PDE methods, 数值偏微分方法 (or Monte Carlo methods).\n",
+    "\n",
+    "> Note: The PDE approach does not apply to models not built upon Brownian motions (which includes many interesting asset price models).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Black-Scholes PDE:\n",
+    "$$\n",
+    "V_t+\\frac{1}{2}\\sigma^2S^2V_{SS}+(r-q)SV_S-rV=0\n",
+    "$$\n",
+    "\n",
+    "Which admits an explicit solution (显式解) for European calls, European puts and a few other simple options (the Black-Scholes formulas).\n",
+    "\n",
+    "> Using Black-Scholes PDE to test numerical schemes for parabolic PDEs.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8374f647",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8535aa87",
+   "metadata": {},
+   "source": [
+    "<img src=\"./image/european_call_option_price_3d.png\" alt=\"image.png\" style=\"width: 500px; height: auto; display: block; margin: 0 auto;\">\n",
+    "<br>\n",
+    "<img src=\"./image/european_put_option_price_3d.png\" alt=\"image.png\" style=\"width: 500px; height: auto; display: block; margin: 0 auto;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3955e37e",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "deb13438",
+   "metadata": {},
+   "source": [
+    "### 有限差分网格 | Finite-difference grid\n",
+    "\n",
+    "- $\\Delta_S = \\frac{S_{\\max} - S_{\\min}}{M}$\n",
+    "- $\\Delta_t = \\frac{T}{N}$\n",
+    "\n",
+    "The numerical approximation $v_{\\color{yellow}ij}$ of $V(t, S)$ is only computed at the grid points $(t_{\\color{yellow}i}, S_{\\color{yellow}j})$\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "(t_{\\color{yellow}i}, S_{\\color{yellow}j}) & = ({\\color{yellow}i}\\Delta_t, S_{\\min} + {\\color{yellow}j}\\Delta_S ) \\\\\n",
+    "v_{\\color{yellow}ij} & \\approx V({\\color{yellow}i}\\Delta_t, S_{\\min} + {\\color{yellow}j}\\Delta_S)\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "It is an equality at the terminal condition points $(T, S_{\\color{yellow}j})$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3025ec64",
+   "metadata": {},
+   "source": [
+    "<img src=\"./image/finite_difference_grid.png\" alt=\"image.png\" style=\"width: 500px; height: auto; display: block; margin: 0 auto;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bef9feb",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3e526fa",
+   "metadata": {},
+   "source": [
+    "### 有限差分近似 | Finite-difference approximation\n",
+    "\n",
+    "We approximate the partial derivatives $V_t, V_S, V_{SS}$ by,\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "V_t(t_{\\color{yellow}i},S_j) & \\approx \\frac{v_{{\\color{yellow}i}j}-v_{{\\color{yellow}i-1},j}}{\\Delta_t} \\\\\n",
+    "V_S(t_i,S_{\\color{yellow}j}) & \\approx \\frac{v_{i,{\\color{yellow}j+1}}-v_{i,{\\color{yellow}j-1}}}{2\\Delta_S} \\\\\n",
+    "V_{SS}(t_i,S_{\\color{yellow}j}) & \\approx \\frac{v_{i,{\\color{yellow}j+1}}-2v_{i{\\color{yellow}j}}+v_{i,{\\color{yellow}j-1}}}{\\Delta_S^2}\n",
+    "\\end{aligned}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb6c13c3",
+   "metadata": {},
+   "source": [
+    "<img src=\"./image/finite_difference_approximation.png\" alt=\"image.png\" style=\"width: 500px; height: auto; display: block; margin: 0 auto;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b32607b",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3a072d8",
+   "metadata": {},
+   "source": [
+    "### 有限差分格式 | Finite-difference scheme\n",
+    "\n",
+    "We replace the partial derivatives in the Black-Scholes PDE by these finite-difference approximations:\n",
+    "\n",
+    "$$\n",
+    "{\\color{yellow}V_t} + \\frac{1}{2} \\sigma^2 S^2 {\\color{yellow}V_{SS}} + (r - q) S {\\color{yellow}V_S} - r {\\color{yellow}V} = 0 \\\\\n",
+    "{\\color{yellow}\\frac{v_{ij} - v_{i - 1,j}}{\\Delta_t}} + \\frac{1}{2} \\sigma^2 S_j^2 {\\color{yellow}\\frac{v_{i,j + 1} - 2v_{ij} + v_{i,j - 1}}{\\Delta_S^2}} + (r - q) S_j {\\color{yellow}\\frac{v_{i,j + 1} - v_{i,j - 1}}{2\\Delta_S}} - r {\\color{yellow}v_{ij}} = 0\n",
+    "$$\n",
+    "\n",
+    "Define ${\\color{yellow}a_j} = \\frac{\\Delta_t\\sigma^2 S_j^2}{2\\Delta_S^2}$ and ${\\color{yellow}b_j} = \\frac{\\Delta_t(r - q)S_j}{2\\Delta_S}$.\n",
+    "\n",
+    "For $j = 1,...,M-1$:\n",
+    "$$\n",
+    "v_{ij} - v_{i - 1,j} + {\\color{yellow}a_j} (v_{i,j + 1} - 2v_{ij} + v_{i,j - 1}) + {\\color{yellow}b_j}(v_{i,j + 1} - v_{i,j - 1}) - r\\Delta_tv_{ij} = 0\n",
+    "$$\n",
+    "Grouping similar terms together, we obtain:\n",
+    "$$\n",
+    "v_{ij} - v_{i - 1,j} + {\\color{yellow}d_j} v_{i,j - 1} + {\\color{yellow}m_j} v_{ij} + {\\color{yellow}u_j} v_{i,j + 1} = 0\n",
+    "$$\n",
+    "- ${\\color{yellow}d_j} := a_j - b_j$\n",
+    "- ${\\color{yellow}m_j} := -2a_j - r\\Delta_t$\n",
+    "- ${\\color{yellow}u_j} := a_j + b_j$\n",
+    "\n",
+    "The $j = 1,...,M-1$ equations at time $t_i$ are:\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "& v_{i, {\\color{yellow}1}} & - & v_{i - 1, {\\color{yellow}1}} & + & d_{\\color{yellow}1} & v_{i, {\\color{yellow}0}} & + & m_{\\color{yellow}1} v_{i, {\\color{yellow}1}} & + & u_{\\color{yellow}1} v_{i, {\\color{yellow}2}} & = 0 \\\\\n",
+    "\\vdots \\\\\n",
+    "& v_{i, {\\color{yellow}j}} & - & v_{i - 1, {\\color{yellow}j}} & + & d_{\\color{yellow}j} & v_{i, {\\color{yellow}j - 1}} & + & m_{\\color{yellow}j} v_{i, {\\color{yellow}j}} & + & u_{\\color{yellow}j} v_{i, {\\color{yellow}j + 1}} & = 0 \\\\\n",
+    "\\vdots \\\\\n",
+    "& v_{i, {\\color{yellow}M - 1}} & - & v_{i - 1, {\\color{yellow}M - 1}} & + & d_{\\color{yellow}M - 1} & v_{i, {\\color{yellow}M - 2}} & + & m_{\\color{yellow}M - 1} v_{i, {\\color{yellow}M - 1}} & + & u_{\\color{yellow}M - 1} v_{i, {\\color{yellow}M}} & = 0\n",
+    "\\end{aligned}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27338ae8",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28c1add6",
+   "metadata": {},
+   "source": [
+    "### 有限差分方程组 | System of finite-difference equation\n",
+    "\n",
+    "In matrix notation, the system of equation is,\n",
+    "$$\n",
+    "\\mathbf{v}_{i,1:M-1}-\\mathbf{v}_{i-1,1:M-1}+\\mathbf{P}\\mathbf{v}_{i,0:M}=0\n",
+    "$$\n",
+    "- $(M - 1)\\times(M + 1)$ matrix $\\mathbb{P}$\n",
+    "$$\n",
+    "\\mathbf{P} = \n",
+    "\\begin{bmatrix}\n",
+    "d_1 & m_1 & u_1 & 0 & \\cdots & \\cdots & 0 \\\\\n",
+    "0 & d_2 & m_2 & u_2 & & & \\vdots \\\\\n",
+    "\\vdots & & d_3 & \\ddots & \\ddots & & \\vdots \\\\\n",
+    "\\vdots & & & \\ddots & \\ddots & u_{M-2} & 0 \\\\\n",
+    "0 & \\cdots & \\cdots & 0 & d_{M-1} & m_{M-1} & u_{M-1}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "We can decompose the set of rows (行集) $\\bar{\\Omega}:=\\{0,1,2,\\ldots,M\\}$ into the interior rows (内部行) $\\Omega:=\\{1,2,\\ldots,M-1\\}$ and the boundary rows (边界行) $\\partial\\Omega:=\\{0,M\\}$\n",
+    "$$\n",
+    "\\mathbf{v}_i^{\\bar{\\Omega}} = \n",
+    "\\begin{bmatrix}\n",
+    "v_{i,0} \\\\\n",
+    "v_{i,1} \\\\\n",
+    "v_{i,2} \\\\\n",
+    "\\vdots \\\\\n",
+    "v_{i,M-1} \\\\\n",
+    "v_{i,M}\n",
+    "\\end{bmatrix}\n",
+    "\\in \\mathbb{R}^{M+1}, \\quad\\quad\n",
+    "\\mathbf{v}_i^\\Omega = \n",
+    "\\begin{bmatrix}\n",
+    "v_{i,1} \\\\\n",
+    "v_{i,2} \\\\\n",
+    "\\vdots \\\\\n",
+    "v_{i,M-1} \n",
+    "\\end{bmatrix}\n",
+    "\\in\\mathbb{R}^{M-1}, \\quad\\quad\n",
+    "\\mathbf{v}_i^{\\partial\\Omega} = \n",
+    "\\begin{bmatrix}\n",
+    "v_{i,0} \\\\\n",
+    "v_{i,M}\n",
+    "\\end{bmatrix}\n",
+    "\\in\\mathbb{R}^2\n",
+    "$$\n",
+    "\n",
+    "Matrices ${\\color{red}\\mathbf{A}} \\in\\mathbb{R}^{(M-1)\\times(M-1)}$ and ${\\color{blue}\\mathbf{B} }\\in\\mathbb{R}^{(M-1)\\times2}$\n",
+    "$$\n",
+    "{\\color{red}\\mathbf{A}} = \n",
+    "\\begin{bmatrix}\n",
+    "m_1 & u_1 & 0 & \\cdots & \\cdots \\\\\n",
+    "d_2 & m_2 & u_2 & & \\\\\n",
+    "& d_3 & \\ddots & \\ddots & \\\\\n",
+    "& & \\ddots & \\ddots & u_{M-2} \\\\\n",
+    "\\cdots & \\cdots & 0 & d_{M-1} & m_{M-1}\n",
+    "\\end{bmatrix}\n",
+    ", \\quad\\quad\n",
+    "{\\color{blue}\\mathbf{B}} = \n",
+    "\\begin{bmatrix} \n",
+    "d_1 & \\mathbf{0} \\\\\n",
+    "0 & \\vdots \\\\\n",
+    "\\vdots & \\vdots \\\\\n",
+    "\\vdots & 0 \\\\\n",
+    "0 & u_{M-1}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "- $\\mathbf{P} = \\Bigg[ {\\color{blue}\\mathbf{B}}[:,0] \\Biggm| {\\color{red}\\mathbf{A}} \\Biggm| {\\color{blue}\\mathbf{B}}[:,1] \\Bigg]$\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{P}\\mathbf{v}_i^{\\bar{\\Omega}} = {\\color{red}\\mathbf{A}} \\mathbf{v}_i^\\Omega + {\\color{blue}\\mathbf{B}} \\mathbf{v}_i^{\\partial\\Omega}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e32a2f51",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcc0799d",
+   "metadata": {},
+   "source": [
+    "### 显式格式 | Explicit scheme\n",
+    "\n",
+    "Previous notation:\n",
+    "$$\n",
+    "\\mathbf{v}_{i,1:M-1}-\\mathbf{v}_{i-1,1:M-1}+\\mathbf{P}\\mathbf{v}_{i,0:M}=0\n",
+    "$$\n",
+    "\n",
+    "New notation:\n",
+    "$$\n",
+    "\\mathbf{v}_i^\\Omega-\\mathbf{v}_{i-1}^\\Omega+\\mathbf{A}\\mathbf{v}_i^\\Omega+\\mathbf{B}\\mathbf{v}_i^{\\partial\\Omega}=0\n",
+    "$$\n",
+    "\n",
+    "Solultion $\\mathbf{v}_0^{\\Omega}$ is obtained by computing:\n",
+    "$$\n",
+    "\\mathbf{v}_{i-1}^\\Omega=(\\mathbf{I}+\\mathbf{A})\\mathbf{v}_i^\\Omega+\\mathbf{B}\\mathbf{v}_i^{\\partial\\Omega}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89205e32",
+   "metadata": {},
+   "source": [
+    "<img src=\"./image/explicit_scheme.png\" alt=\"image.png\" style=\"width: 200px; height: auto; display: block; margin: 0 auto;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aa4f144",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c9e94b8",
+   "metadata": {},
+   "source": [
+    "### 隐式格式 | Implicit scheme\n",
+    "\n",
+    "Approximate the partial derivative $V_t$ with a $\\color{yellow}\\text{forward difference}$:\n",
+    "$$\n",
+    "V_t(t_{\\color{yellow}i},S_j) \\approx \\frac{v_{{\\color{yellow}i+1},j}-v_{{\\color{yellow}i},j}}{\\Delta_t}\n",
+    "$$\n",
+    "\n",
+    "The numerical scheme becomes:\n",
+    "$$\n",
+    "\\mathbf{v}_{\\color{yellow}i+1}^\\Omega-\\mathbf{v}_{\\color{yellow}i}^\\Omega+\\mathbf{A}\\mathbf{v}_i^\\Omega+\\mathbf{B}\\mathbf{v}_i^{\\partial\\Omega}=0\n",
+    "$$\n",
+    "\n",
+    "Solution is obtained by solving the linear system:\n",
+    "$$\n",
+    "(\\mathbf{I}-\\mathbf{A})\\mathbf{v}_i^\\Omega=\\mathbf{v}_{i+1}^\\Omega+\\mathbf{B}\\mathbf{v}_i^{\\partial\\Omega}\n",
+    "$$\n",
+    "- $i = N - 1,...,1, 0$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c95daed4",
+   "metadata": {},
+   "source": [
+    "<img src=\"./image/Implicit_scheme.png\" alt=\"image.png\" style=\"width: 200px; height: auto; display: block; margin: 0 auto;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5000f623",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1786742",
+   "metadata": {},
+   "source": [
+    "### $\\theta$-method\n",
+    "\n",
+    "Implicit scheme at time $t_i$:\n",
+    "$$\n",
+    "\\mathbf{v}_{i+1}^\\Omega-\\mathbf{v}_i^\\Omega+\\mathbf{A}\\mathbf{v}_i^\\Omega+\\mathbf{B}\\mathbf{v}_i^{\\partial\\Omega}=0\n",
+    "$$\n",
+    "\n",
+    "Explicit scheme at time $t_{i + 1}$:\n",
+    "$$\n",
+    "\\mathbf{v}_{i+1}^{\\Omega}-\\mathbf{v}_{i}^{\\Omega}+\\mathbf{A}\\mathbf{v}_{i+1}^{\\Omega}+\\mathbf{B}\\mathbf{v}_{i+1}^{\\partial\\Omega}=0\n",
+    "$$\n",
+    "\n",
+    "A linear combination of these two equations with ${\\color{yellow}\\theta}\\in[0, 1]$\n",
+    "$$\n",
+    "{\\color{yellow}\\theta}\\left(\\mathbf{v}_{i + 1}^\\Omega - \\mathbf{v}_i^\\Omega + \\mathbf{A}\\mathbf{v}_i^\\Omega + \\mathbf{B}\\mathbf{v}_i^{\\partial\\Omega}\\right) + {\\color{yellow}(1 - \\theta)}\\left(\\mathbf{v}_{i + 1}^\\Omega - \\mathbf{v}_i^\\Omega + \\mathbf{A}\\mathbf{v}_{i + 1}^\\Omega + \\mathbf{B}\\mathbf{v}_{i + 1}^{\\partial\\Omega}\\right) = 0\n",
+    "$$\n",
+    "\n",
+    "After rearanging the terms, we obtain,\n",
+    "$$\n",
+    "{\\color{yellow}(\\mathbf{I} - \\theta\\mathbf{A})}\\mathbf{v}_i^\\Omega = {\\color{yellow}(\\mathbf{I} + (1 - \\theta)\\mathbf{A})}\\mathbf{v}_{i + 1}^\\Omega + \\theta\\mathbf{B}\\mathbf{v}_i^{\\partial\\Omega} + (1 - \\theta)\\mathbf{B}\\mathbf{v}_{i + 1}^{\\partial\\Omega}\n",
+    "$$\n",
+    "\n",
+    "Solution $\\mathbb{v}_0^{\\Omega}$ is obtained by solving this linear system for $i = N - 1, ..., 1, 0$\n",
+    "\n",
+    "> $\\theta = 0$ - Explicit scheme<br>\n",
+    "> $\\theta = 1$ - Implicit scheme<br>\n",
+    "> $\\theta = \\frac12$ - Crank-Nicolson scheme\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5c33b0f",
+   "metadata": {},
+   "source": [
+    "<img src=\"./image/implementation_theta_method.png\" alt=\"image.png\" style=\"width: 900px; height: auto; display: block; margin: 0 auto;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "602b463b",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "44382cbd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.936473467759729e+154\n",
+      "4.075957116739053\n",
+      "4.069519474359312\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.sparse import diags\n",
+    "from scipy.linalg import solve\n",
+    "from scipy import interpolate\n",
+    "\n",
+    "def BS_PUT_theta_method(smin,smax,K,T,r,q,sigma,N,M,theta):\n",
+    "    dt = T/N\n",
+    "    ds = (smax-smin)/M\n",
+    "    tgrid = np.linspace(0.0,T,N+1)\n",
+    "    sgrid = np.linspace(smin,smax,M+1)\n",
+    "    a = dt*sigma*sigma*sgrid*sgrid/(2*ds*ds)\n",
+    "    b = dt*(r-q)*sgrid/(2.0*ds)\n",
+    "    d = a-b\n",
+    "    m = -2.0*a-r*dt\n",
+    "    u = a+b\n",
+    "    A = diags([d[2:M], m[1:M], u[1:(M-1)]], [-1, 0, 1]).toarray()\n",
+    "    B = np.zeros([M-1,2])\n",
+    "    B[0,0] = d[1]\n",
+    "    B[-1,1] = u[M-1]\n",
+    "    Al = np.eye(M-1) - theta*A\n",
+    "    Ar = np.eye(M-1) + (1.0-theta)*A\n",
+    "    V = np.zeros([N+1,M+1])\n",
+    "    V[N,:] = np.maximum(K-sgrid,0.0) # terminal condition\n",
+    "    V[:,M] = 0.0 # boundary condition\n",
+    "    V[:,0] = K*np.exp(-r*(T-tgrid)) - smin # boundary condition\n",
+    "    Vbound = np.zeros([2,N+1])\n",
+    "    Vbound[0,:] = V[:,0]\n",
+    "    Vbound[1,:] = V[:,M]\n",
+    "    for i in np.arange(N-1,-1,-1):\n",
+    "        Br = ((Ar@(V[i+1,1:M])).squeeze()+theta*B@(Vbound[:,i])+(1.0-theta)*B@(Vbound[:,i+1])).T\n",
+    "        V[i,1:M] = np.squeeze(solve( Al , Br ))\n",
+    "    v0 = interpolate.interp1d(sgrid, V[0,:], kind='cubic')  \n",
+    "    return v0\n",
+    "\n",
+    "smin, smax, r, q = 0.0, 150.0, 0.10, 0.00\n",
+    "T, K, sigma = 5/12, 50.0, 0.4\n",
+    "N = 100 # number of time steps\n",
+    "M = 500 # number of space steps\n",
+    "v0_EX = BS_PUT_theta_method(smin,smax,K,T,r,q,sigma,N,M,0.0) # explicit scheme\n",
+    "v0_CN = BS_PUT_theta_method(smin,smax,K,T,r,q,sigma,N,M,0.5) # Crank-Nicolson scheme\n",
+    "v0_IM = BS_PUT_theta_method(smin,smax,K,T,r,q,sigma,N,M,1.0) # implicit scheme\n",
+    "S0 = 50.0\n",
+    "# print(BS_PUT(S0,K,T,r-q,sigma)) # price using Black-Scholes formula\n",
+    "## 4.075980984787783\n",
+    "print(v0_EX(S0)) # price using explicit PDE scheme: UNSTABLE\n",
+    "## -2.936473467759726e+154\n",
+    "print(v0_CN(S0)) # price using Crank-Nicolson scheme\n",
+    "## 4.075957116739048\n",
+    "print(v0_IM(S0)) # price using implicit scheme\n",
+    "## 4.069519474359279\n"
+   ]
   }
  ],
  "metadata": {
