--- a/NandS_TechniquesInFinance/Assignments/A1.ipynb
+++ b/NandS_TechniquesInFinance/Assignments/A1.ipynb
@@ -2,46 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "987e59bf-df00-4233-8e91-abaea8266bf5",
-   "metadata": {},
-   "source": [
-    "### Instructions\n",
-    "+ Type your name and student ID above.\n",
-    "+ Answer the questions in this Jupyter notebook (add your code and explanations)\n",
-    "+ Submit your file on iSpace before the deadline.\n",
-    "+ Make sure to submit the right file (the one containing your answers) and that the file can be opened and run without problem."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "024500df-f3c8-46df-bd57-bdcc4c5301ee",
-   "metadata": {},
-   "source": [
-    "### Recommendations\n",
-    "\n",
-    "+ Try to give *meaningful names* to your variables so we can easily understand what each variable is used for in your program.\n",
-    "+ Please put comments in your code (<u>in English</u>) to explain *what* your code is doing and *how* it is doing it.\n",
-    "+ Make sure all your code is properly organized and easy to read.\n",
-    "+ Feel free to create Markdown blocks to add comments and explanations.\n",
-    "<!--\n",
-    "https://www.markdownguide.org/basic-syntax/\n",
-    "https://www.markdownguide.org/extended-syntax/\n",
-    "-->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "da4f4265-d72f-4ea5-86d2-b61811b4d93b",
-   "metadata": {},
-   "source": [
-    "### Rules\n",
-    "\n",
-    "+ Late homework assignments will be penalized, unless you have a valid written excuse (medical, etc.). Once the solution has been released, late homework assignments will not be accepted.\n",
-    "+ You must do this assignment alone. You can use the source codes from the lectures and the official tutorials / user guides of Python packages as references, but you need to write your answers yourself, not a friend, not someone from the Internet, not AI tools. Cheating means zero.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c46b0b6b-ea1c-43e7-a6fe-b3e417daa0f2",
    "metadata": {},
    "source": [
@@ -55,6 +15,14 @@
     "\n",
     "$$d_1 = \\frac{\\log(S_0/K)+(r+\\sigma^2/2)T}{\\sigma\\sqrt{T}}\\ ,\\hspace{10mm}d_2 = d_1-\\sigma\\sqrt{T}$$  \n",
     "where $\\mathcal{N}$ is the cumulative distribution function (CDF) of a standard Gaussian variable, and therefore $\\mathcal{N}'$, the derivative of $\\mathcal{N}$, is the probability distribution function (PDF) of a standard Gaussian variable. Note that we ignore the dividend yield parameter for this exercise.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3846f3f1",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -77,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ef5b698b-fac9-4c8b-ac45-cc5c30246a00",
    "metadata": {},
    "outputs": [
@@ -93,7 +61,6 @@
     }
    ],
    "source": [
-    "# Write your code here\n",
     "import numpy as np\n",
     "from scipy.stats import norm\n",
     "import matplotlib.pyplot as plt\n",
@@ -112,7 +79,7 @@
     "T_MIN, T_MAX = 1 / 52, 1.0\n",
     "T = np.linspace(T_MIN, T_MAX, 1_000)\n",
     "\n",
-    "def PLOT_THETA() -> None:\n",
+    "def PLOT_THETA():\n",
     "    theta = THETA_BS_CALL(S0, K, T, r, sigma)\n",
     "\n",
     "    plt.figure(figsize = (7, 5))\n",
@@ -125,6 +92,7 @@
     "    plt.grid(True, color = \"white\", linewidth = 1)\n",
     "\n",
     "    plt.plot(T, theta, linewidth = 4, solid_capstyle = \"round\")\n",
+    "    \n",
     "    plt.title(\"Theta of a European Call Option\", fontsize = 18, loc = \"left\")\n",
     "    plt.xlabel(\"$T$\", fontsize = 14, loc = \"right\")\n",
     "\n",
@@ -132,6 +100,14 @@
     "    plt.show()\n",
     "\n",
     "PLOT_THETA()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "917301e0",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -152,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "caccb110-8769-450c-be38-f2e422b42ba9",
    "metadata": {},
    "outputs": [
@@ -168,7 +144,6 @@
     }
    ],
    "source": [
-    "# Write your code here\n",
     "def BS_CALL(S0: float, K: float, r: float, sigma: float, T: float) -> float:\n",
     "    d1 = (np.log(S0 / K) + (r + (sigma ** 2) / 2) * T) / (sigma * np.sqrt(T))\n",
     "    d2 = d1 - sigma * np.sqrt(T)\n",
@@ -223,6 +198,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "715ef51b",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8a63485d-77d9-4469-a85d-7cc60cf27aa5",
    "metadata": {},
    "source": [
@@ -235,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a1a75c82-044f-4553-8581-2a35d23a41f7",
    "metadata": {},
    "outputs": [
@@ -287,11 +270,11 @@
     "        \n",
     "        absolute_error = abs(theta_fd_target_T - theta_exact)\n",
     "\n",
-    "        print(f\"N = {N:4d}, h = {h:.6f}, Absolute Error = {absolute_error:.6f}\")\n",
+    "        print(f\"N = {N}, h = {h}, Absolute Error = {absolute_error}\")\n",
     "        if absolute_error < target_error:\n",
     "            print(f\"\\nRequired N: {N}\")\n",
-    "            print(f\"Corresponding mesh size: {h:.6f}\")\n",
-    "            print(f\"Absolute error at target T: {absolute_error:.6f}\")\n",
+    "            print(f\"Corresponding mesh size: {h}\")\n",
+    "            print(f\"Absolute error at target T: {absolute_error}\")\n",
     "            return N, h\n",
     "\n",
     "        N += 1\n",
