--- a/NandS_TechniquesInFinance/4. Finite_difference_methods.ipynb
+++ b/NandS_TechniquesInFinance/4. Finite_difference_methods.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "567912b9",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "85dd42bc",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "4e724f70",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "6eea187c",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "303fa60b",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "235d81ff",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "35ba9f40",
    "metadata": {},
    "outputs": [
@@ -1002,8 +1002,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "44382cbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.sparse import diags\n",
+    "from scipy.linalg import solve\n",
+    "from scipy import interpolate\n",
+    "\n",
+    "def BS_PUT_theta_method(smin, smax, K, T, r, q, sigma, N, M, theta):\n",
+    "    dt = T / N\n",
+    "    ds = (smax - smin) / M\n",
+    "\n",
+    "    tgrid = np.linspace(0.0, T, N + 1)\n",
+    "    sgrid = np.linspace(smin, smax, M + 1)\n",
+    "    \n",
+    "    a = dt * sigma * sigma * sgrid * sgrid / (2 * ds * ds)\n",
+    "    b = dt * (r - q) * sgrid / (2.0 * ds)\n",
+    "    \n",
+    "    d = a - b\n",
+    "    m = - 2.0 * a - r * dt\n",
+    "    u = a + b\n",
+    "    \n",
+    "    A = diags([d[2:M], m[1:M], u[1:(M - 1)]], [-1, 0, 1]).toarray()\n",
+    "    B = np.zeros([M - 1, 2])\n",
+    "    B[0, 0] = d[1]\n",
+    "    B[-1, 1] = u[M - 1]\n",
+    "\n",
+    "    Al = np.eye(M - 1) - theta * A\n",
+    "    Ar = np.eye(M - 1) + (1.0 - theta) * A\n",
+    "\n",
+    "    V = np.zeros([N + 1, M + 1])\n",
+    "\n",
+    "    # terminal condition\n",
+    "    V[N, :] = np.maximum(K - sgrid, 0.0)\n",
+    "    # boundary condition\n",
+    "    V[:, M] = 0.0\n",
+    "    # boundary condition\n",
+    "    V[:, 0] = K * np.exp(- r * (T - tgrid)) - smin\n",
+    "\n",
+    "    Vbound = np.zeros([2, N + 1])\n",
+    "    Vbound[0, :] = V[:, 0]\n",
+    "    Vbound[1, :] = V[:, M]\n",
+    "    for i in np.arange(N - 1, -1, -1):\n",
+    "        Br = ((Ar @ (V[i + 1, 1:M])).squeeze() + theta * B @ (Vbound[:, i]) + (1.0 - theta) * B @ (Vbound[:, i + 1])).T\n",
+    "        V[i, 1:M] = np.squeeze(solve(Al, Br))\n",
+    "    v0 = interpolate.interp1d(sgrid, V[0, :], kind = 'cubic')  \n",
+    "    return v0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "824e47b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.075594500192874\n",
+      "4.074951689304101\n",
+      "4.0743086383029326\n"
+     ]
+    }
+   ],
+   "source": [
+    "smin, smax, r, q = 0.0, 150.0, 0.10, 0.00\n",
+    "T, K, sigma = 5/12, 50.0, 0.4\n",
+    "\n",
+    "# number of time steps\n",
+    "N = 1000\n",
+    "# number of space steps\n",
+    "M = 100\n",
+    "\n",
+    "# explicit scheme\n",
+    "v0_EX = BS_PUT_theta_method(smin, smax, K, T, r, q, sigma, N, M, 0.0)\n",
+    "# Crank-Nicolson scheme\n",
+    "v0_CN = BS_PUT_theta_method(smin, smax, K, T, r, q, sigma, N, M, 0.5)\n",
+    "# implicit scheme\n",
+    "v0_IM = BS_PUT_theta_method(smin, smax, K, T, r, q, sigma, N, M, 1.0)\n",
+    "\n",
+    "S0 = 50.0\n",
+    "# print(BS_PUT(S0,K,T,r-q,sigma)) # price using Black-Scholes formula\n",
+    "# 4.075980984787783\n",
+    "print(v0_EX(S0)) # price using explicit PDE scheme\n",
+    "# 4.075594500192876\n",
+    "print(v0_CN(S0)) # price using Crank-Nicolson scheme\n",
+    "# 4.074951689304087\n",
+    "print(v0_IM(S0)) # price using implicit scheme\n",
+    "# 4.074308638302932\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7a1f49a6",
    "metadata": {},
    "outputs": [
     {
@@ -1017,47 +1113,21 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from scipy.sparse import diags\n",
-    "from scipy.linalg import solve\n",
-    "from scipy import interpolate\n",
-    "\n",
-    "def BS_PUT_theta_method(smin,smax,K,T,r,q,sigma,N,M,theta):\n",
-    "    dt = T/N\n",
-    "    ds = (smax-smin)/M\n",
-    "    tgrid = np.linspace(0.0,T,N+1)\n",
-    "    sgrid = np.linspace(smin,smax,M+1)\n",
-    "    a = dt*sigma*sigma*sgrid*sgrid/(2*ds*ds)\n",
-    "    b = dt*(r-q)*sgrid/(2.0*ds)\n",
-    "    d = a-b\n",
-    "    m = -2.0*a-r*dt\n",
-    "    u = a+b\n",
-    "    A = diags([d[2:M], m[1:M], u[1:(M-1)]], [-1, 0, 1]).toarray()\n",
-    "    B = np.zeros([M-1,2])\n",
-    "    B[0,0] = d[1]\n",
-    "    B[-1,1] = u[M-1]\n",
-    "    Al = np.eye(M-1) - theta*A\n",
-    "    Ar = np.eye(M-1) + (1.0-theta)*A\n",
-    "    V = np.zeros([N+1,M+1])\n",
-    "    V[N,:] = np.maximum(K-sgrid,0.0) # terminal condition\n",
-    "    V[:,M] = 0.0 # boundary condition\n",
-    "    V[:,0] = K*np.exp(-r*(T-tgrid)) - smin # boundary condition\n",
-    "    Vbound = np.zeros([2,N+1])\n",
-    "    Vbound[0,:] = V[:,0]\n",
-    "    Vbound[1,:] = V[:,M]\n",
-    "    for i in np.arange(N-1,-1,-1):\n",
-    "        Br = ((Ar@(V[i+1,1:M])).squeeze()+theta*B@(Vbound[:,i])+(1.0-theta)*B@(Vbound[:,i+1])).T\n",
-    "        V[i,1:M] = np.squeeze(solve( Al , Br ))\n",
-    "    v0 = interpolate.interp1d(sgrid, V[0,:], kind='cubic')  \n",
-    "    return v0\n",
-    "\n",
     "smin, smax, r, q = 0.0, 150.0, 0.10, 0.00\n",
     "T, K, sigma = 5/12, 50.0, 0.4\n",
-    "N = 100 # number of time steps\n",
-    "M = 500 # number of space steps\n",
-    "v0_EX = BS_PUT_theta_method(smin,smax,K,T,r,q,sigma,N,M,0.0) # explicit scheme\n",
-    "v0_CN = BS_PUT_theta_method(smin,smax,K,T,r,q,sigma,N,M,0.5) # Crank-Nicolson scheme\n",
-    "v0_IM = BS_PUT_theta_method(smin,smax,K,T,r,q,sigma,N,M,1.0) # implicit scheme\n",
+    "\n",
+    "# number of time steps\n",
+    "N = 100\n",
+    "# number of space steps\n",
+    "M = 500\n",
+    "\n",
+    "# explicit scheme\n",
+    "v0_EX = BS_PUT_theta_method(smin, smax, K, T, r, q, sigma, N, M, 0.0)\n",
+    "# Crank-Nicolson scheme\n",
+    "v0_CN = BS_PUT_theta_method(smin, smax, K, T, r, q, sigma, N, M, 0.5)\n",
+    "# implicit scheme\n",
+    "v0_IM = BS_PUT_theta_method(smin, smax, K, T, r, q, sigma, N, M, 1.0)\n",
+    "\n",
     "S0 = 50.0\n",
     "# print(BS_PUT(S0,K,T,r-q,sigma)) # price using Black-Scholes formula\n",
     "## 4.075980984787783\n",
@@ -1068,6 +1138,200 @@
     "print(v0_IM(S0)) # price using implicit scheme\n",
     "## 4.069519474359279\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9d3114c",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea5c5644",
+   "metadata": {},
+   "source": [
+    "### PDE格式的数值稳定性 | Numerical stability of PDE schemes\n",
+    "\n",
+    "The $\\color{yellow}\\text{explicit scheme, 显式格式}$ is simple and easy to implement, but is $\\color{yellow}\\text{numerically unstable, 数值不稳定}$.\n",
+    "\n",
+    "In the case of the Black-scholes PDE, a $\\color{yellow}\\text{stability analysis}$ would reveal that it is stable if:\n",
+    "$$\n",
+    "\\Large\n",
+    "\\frac{\\sigma^2 S_{\\max}^2 \\Delta_t}{\\Delta_S^2} \\le 1\n",
+    "$$\n",
+    "\n",
+    "By contrast, the $\\color{yellow}\\text{implicit (隐式) and Crank-Nicolson scheme}$ are $\\color{yellow}\\text{unconditionally stable, 无条件稳定}$.\n",
+    "\n",
+    "> More precisely, the $\\theta$-method is unconditionally stable if and only if $\\theta \\ge 0.5$.<br>\n",
+    "> 更准确地说，$\\theta$ 方法 当且仅当 $\\theta \\ge 0.5$ 时，是无条件稳定的。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bcfa311",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20c04a69",
+   "metadata": {},
+   "source": [
+    "#### 显式格式的数值稳定性 | Numerical stability of explicit scheme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd6c4854",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6666666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "smin, smax, T, sigma = 0.0, 150.0, 5 / 12, 0.4\n",
+    "\n",
+    "# number of time steps\n",
+    "N = 1000\n",
+    "# number of space steps\n",
+    "M = 100\n",
+    "\n",
+    "dt, ds = T / N, (smax - smin) / M\n",
+    "print(sigma * sigma * smax * smax * dt / (ds * ds))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb466532",
+   "metadata": {},
+   "source": [
+    "In this example, the stability ratio $ < 1$.<br>\n",
+    "The explicit scheme is $\\color{yellow}\\text{stable}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7063062c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "166.66666666666669\n"
+     ]
+    }
+   ],
+   "source": [
+    "smin, smax, T, sigma  = 0.0, 150.0, 5/12, 0.4\n",
+    "\n",
+    "# number of time steps\n",
+    "N = 100 \n",
+    "# number of space steps\n",
+    "M = 500 \n",
+    "\n",
+    "dt, ds = T / N, (smax - smin) / M\n",
+    "print(sigma * sigma * smax * smax * dt / (ds * ds))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f22219f2",
+   "metadata": {},
+   "source": [
+    "In this example, the stability ratio $ > 1$.<br>\n",
+    "The explicit scheme is $\\color{yellow}\\text{unstable}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b40895e",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bca8471",
+   "metadata": {},
+   "source": [
+    "#### Crank-Nicolson格式的数值稳定性 | Numerical stability of Crank-Nicolson scheme\n",
+    "\n",
+    "The $\\theta$ method is $\\color{yellow}\\text{unconditionally stable}$ for any $\\theta \\ge 0.5$, therefore, the Crank-Nicolson scheme $\\theta = 0.5$ is stable.\n",
+    "\n",
+    "However, the $\\theta$ method is only $\\color{yellow}\\text{conditionally stable}$ for $\\theta = 0.5 - \\varepsilon$, $0 < \\varepsilon \\le 0.5$.\n",
+    "\n",
+    "This means that, any perturbation, for example due to **float-rounding error**, could push the Crank-Nicolson scheme in the conditionally stable region, and even generate unstable oscillations if the stability condition is not satisfied.\n",
+    "> 这意味着，任何扰动（例如由于浮点数舍入误差）都可能将Crank-Nicolson格式推入条件稳定区域，如果稳定性条件不满足，甚至可能产生不稳定振荡。\n",
+    "\n",
+    "For this reason, the Crank-Nicolson scheme is called $\\color{yellow}\\text{neutrally stable, 中性稳定}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12b7e34f",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "376df8ff",
+   "metadata": {},
+   "source": [
+    "#### 观察 | observations\n",
+    "\n",
+    "1. The explicit scheme is unreliable (numerical instability).\n",
+    "2. The $\\color{yellow}\\text{Crank-Nicolson scheme}$ is the most accurate, and is the only one which improves when $\\color{yellow}M$ grows for fixed $\\color{yellow}N$.\n",
+    "3. Errors grow with $\\color{yellow}\\sigma$.\n",
+    "4. Errors are large at-the-money (when price $\\color{yellow}S$ is close to the strike price $\\color{yellow}K$).\n",
+    "   - This suggests using a variable space grid (可变空间网格) (finer grid (更细密的网格) around $K$)\n",
+    "\n",
+    "> 可变空间网格（Variable Space Grid）:\n",
+    "> - 在关心区域（如平值 $K$ 附近）加密网格，而在其他区域使用较稀疏的网格，可以智能地分配计算资源。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60649d94",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "963a7c07",
+   "metadata": {},
+   "source": [
+    "## 4. 总结 | Conclusions\n",
+    "\n",
+    "1. The explicit scheme is numerically unstable, and should be avoided.\n",
+    "    - The $\\theta$ method with $\\theta \\ge 0.5$ is the finite-difference scheme to use in practice.\n",
+    "2. Performing a change of variables before applying a finite-difference scheme can greatly improves its accuracy.\n",
+    "    - The best choice of variable transform depends on the problem at hand.\n",
+    "\n",
+    "> These two conclusions were obtained from numerical experiments with Black-scholes PDE, but these are $\\color{yellow}\\text{general}$ observations which $\\color{yellow}\\text{remain true}$ for other types of PDE.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0888360f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
